# zarr-tui

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  colormap.rs  lib.rs  main.rs
src/ui/: colorbar.rs  help_overlay.rs  mod.rs  status_bar.rs
src/zarr/: chunk_loader.rs  chunk_manager.rs  mod.rs  storage.rs
